# FRAMES-Dynamixel-Arm

./: .gitmodules
frames_bringup/: CMakeLists.txt  package.xml
frames_bringup/config/: urdf.rviz
frames_bringup/launch/: rsp.launch.py  rsp_sim.launch.py
frames_description/: CMakeLists.txt  package.xml
frames_description/meshes/: frames_base_link.stl  frames_link1.stl  frames_link2.stl  frames_link3.stl  frames_link4.stl  frames_link5.stl  frames_link6.stl
frames_description/urdf/: frames.urdf
frames_moveit/: .setup_assistant  CMakeLists.txt  package.xml
frames_moveit/config/: Frames.ros2_control.xacro  Frames.srdf  Frames.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
frames_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
panda_description/: package.xml
