<?xml version="1.0"?>
<package format="3">
  <name>frames_description</name>
  <version>0.0.0</version>
  <description>Frames description package</description>

  <author email="kousheekc@gmail.com">Kousheek Chakraborty</author>
  <maintainer email="kousheekc@gmail.com">Kousheek Chakraborty</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
